prepare scrollbar fix for windows

--- a/src/renderer/components/Pane/Pane.scss
+++ b/src/renderer/components/Pane/Pane.scss
@@ -41,3 +41,52 @@
   cursor: col-resize;
   z-index: 99;
 }
+
+/*
+.sidebar::-webkit-scrollbar {
+  background-color: transparent;
+  width: 16px;
+  opacity: 0;
+transition: opacity 0.4s ease;
+}
+
+
+.sidebar::-webkit-scrollbar-track {
+@include customize(theme) {
+  background: getValue(node-object-background);
+}
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid;
+  @include customize(theme) {
+    border-color: getValue(node-object-background);
+  }
+}
+
+.sidebar::-webkit-scrollbar-button {
+  display:none;
+}
+
+.sidebar:hover::-webkit-scrollbar {
+  opacity: 1;
+}
+
+
+**Hide Scrollbars for panes on default, later "revive" them when needed**
+
+
+.pane,
+.vertical-pane,
+.flex-pane,
+.pane-group,
+.vertical-pane-group,
+.horizontal-pane-group {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+*/
